<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>online.yudream.plugins</groupId>
    <artifactId>yudream-admin-plugins</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>YuDream Admin Plugins</name>
    <description>Standalone repository for official YuDream business plugins.</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <yudream.plugin.spi.version>2.4.0</yudream.plugin.spi.version>
        <jackson.version>2.20.0</jackson.version>
    </properties>

    <modules>
        <module>yudream-plugins/yudream-plugin-alipay</module>
        <module>yudream-plugins/yudream-plugin-authlib-injector</module>
        <module>yudream-plugins/yudream-plugin-minecraft-activity-proof</module>
        <module>yudream-plugins/yudream-plugin-minecraft-server</module>
        <module>yudream-plugins/yudream-plugin-project-progress</module>
        <module>yudream-plugins/yudream-plugin-yudream-skin</module>
        <module>yudream-plugins/yudream-plugin-student-info</module>
        <module>yudream-plugins/yudream-plugin-wallet</module>
        <module>yudream-plugins/yudream-plugin-qq-binding</module>
        <module>yudream-plugins/yudream-plugin-ai-chatbot</module>
        <module>yudream-plugins/yudream-plugin-qqbot-automation</module>
        <module>yudream-plugins/yudream-plugin-codex-task-notify</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>online.yudream.base</groupId>
                <artifactId>yudream-plugin-spi</artifactId>
                <version>${yudream.plugin.spi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
